0.1.0
------
1. After list is loaded, wait until next tick to scroll to top.
2. Fix detection of first valid album when getting A..Z lists.
3. Show context menu when clicking on an item that has actions.go=playControl
   or actions.go=play
4. Initial work on desktop UI.

0.0.9
-----
 1. Additional browse modes only supported if "Use categories as supplied by
    server" is enabled.
 2. Fix missing menu items if using server supplied browse modes, and start in
    any view bar browse.
 3. Fix 'What Was That Tune?' missing covers.
 4. If a browse response returns a count of -1, then set count to number of
    items.
 5. When getting categories from server, modify command parameters for album
    sort.
 6. Ensure A..Z splitting is not used for 'New Music' or 'Random Albums'
 7. Only show "i" icon in toolbar for now-playing if music and artist info
    plugin is installed.
 8. Support 'More' command.
 9. Make player list menu scrollable.
10. Fix adding albums to favorites.
11. Use encodeURIComponent to encode favorites, not encodeURI
12. Work-around iOS list size issue by adding a small amount of padding.
13. Remove confirmation dialog when switching off a player.
14. Correctly update display of items when list is refreshed.
15. If player is changed whilst fetching a list of items, delay updating the
    player specific browse list.
16. Catch browse response errors, and create an error entry in the list.
17. If track has no duration, but has a time, then show time in middle. Mainly
    for when playing radio streams.

0.0.8
-----
 1. Only show 'Random Mix' if plugin is installed.
 2. Check that ExtendedBrowseModes is enabled before querying its list of modes.
 3. Likewise, check DontStopTheMusic is enabled before showing its config items.
 4. Fix covers, etc, for Album listing from Additional Browse Modes.
 5. When using additional browse modes, pass role_id when locating albums by
    (e.g.) composer.
 6. Respect server's "Filter Genres at the Album & Track Level" and